--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 bcrypt==3.2.0
 cffi==1.14.5
+ciscoconfparse==1.5.30
+colorama==0.4.4
 cryptography==3.4.6
+dnspython==2.1.0
 future==0.18.2
 netmiko==3.3.3
 ntc-templates==1.6.0
 paramiko==2.7.2
+passlib==1.7.4
 pycparser==2.20
 PyNaCl==1.4.0
 pyserial==3.5
