--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+astroid==2.5.1
 bcrypt==3.2.0
 cffi==1.14.5
 ciscoconfparse==1.5.30
@@ -5,11 +6,15 @@ colorama==0.4.4
 cryptography==3.4.6
 dnspython==2.1.0
 future==0.18.2
+isort==5.7.0
+lazy-object-proxy==1.5.2
+mccabe==0.6.1
 netmiko==3.3.3
 ntc-templates==1.6.0
 paramiko==2.7.2
 passlib==1.7.4
 pycparser==2.20
+pylint==2.7.2
 PyNaCl==1.4.0
 pyserial==3.5
 scp==0.13.3
@@ -17,3 +22,6 @@ six==1.15.0
 tabulate==0.8.9
 tenacity==6.3.1
 textfsm==1.1.0
+toml==0.10.2
+typed-ast==1.4.2
+wrapt==1.12.1
